--- a/p/could.html
+++ b/p/could.html
@@ -5,24 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
-  <div class="khung">
-<center>
-Hệ Thống <b style="color: #ee0000;">Sẽ Tự Động</b> Tải Tệp Về Máy Bạn Trên Sever Của <b><a href="https://blogvnit.com/">Blog Vnit</a></b> Bạn Vui Lòng Đợi Giây Lát Chúng Tôi Đang Chuẩn Bị Cho Bạn , Hệ thống Chúng Tôi Đang Chuẩn Bị Tệp Và sẽ tự động tải Về Sau <b style="color: #ee0000;"><span id="timecount"></span></b> giây !
+		<div class="khung">
+<center style="text-align: justify;">
+Hệ Sống <b style="color: #ee0000;">Sẽ Tự Động</b> Tải Tệp Về Máy Bạn Trên Sever Của <b><a href="https://blogvnit.com/">Blog Vnit</a></b> Bạn Vui Lòng Đợi Giây Lát Chúng Tôi Đang Chuẩn Bị Cho Bạn , Hệ thống Chúng Tôi Đang Chuẩn Bị Tệp Và sẽ tự động tải Về Sau <b style="color: #ee0000;"><span id="timecount"></span></b> giây !
 </center>
-<center>
-<a href="https://www.design5s.net/p/bao-gia-dich-vu-thiet-ke-website.html" target="_blank"><img alt="Downloand Blog Vnit" height="200" src="https://1.bp.blogspot.com/-Hyndw7wpLsk/XgjD1rQh9gI/AAAAAAAAQZM/186mIbm8tv0OdE_9cVkOlmAF5sA8WNATQCLcBGAsYHQ/s1600/Dpct.gif" width="200" /></a>
+<center style="text-align: center;">
+<a href="https://www.design5s.net/p/bao-gia-dich-vu-thiet-ke-website.html" target="_blank"><img alt="Downloand Blog Vnit" height="200" src="https://1.bp.blogspot.com/-EqJNHPs4p4I/XgiJtSiKxjI/AAAAAAAAQZA/pn4HF6rcqVwh9cFeUU2GSOfhdGB90Tg2QCLcBGAsYHQ/s200/animat-cloudsync.gif" width="200" /></a>
 </center>
+</div>
 <div dir="ltr" style="text-align: left;" trbidi="on">
+</div>
+ <div class="info">
 <div style="text-align: justify;">
 Nếu hết thời gian chờ mà tệp vẫn chưa được tải về , các bạn hãy <b>tải lại trang</b> nhé , do kết nối mạng bị yếu dẫn đến đường truyền trên sever&nbsp; không chính xác nên có thể xảy ra lỗi khi hết thời gian chờ mà vẫn chưa được tự động tải về , chúc các bạn vui vẻ</div>
-</div>
-<center>
-<a href="https://www.blogvnit.com/p/bao-gia-dich-vu-thiet-ke-website.html" target="_blank"><img alt="Downloand Blog Vnit" height="200" src="https://1.bp.blogspot.com/-EqJNHPs4p4I/XgiJtSiKxjI/AAAAAAAAQZA/pn4HF6rcqVwh9cFeUU2GSOfhdGB90Tg2QCLcBGAsYHQ/s200/animat-cloudsync.gif" width="200" /></a>
-</center>
-</div>
-<div dir="ltr" style="text-align: left;" trbidi="on">
+<div style="text-align: center;">
+<button class="link-out-btn" id="button1">Downloand</button>
+<div style="text-align: justify;">
+<b><span style="color: red;">Lưu Ý : </span></b>nếu bạn tải sớm rất có thể tệp sẽ bị hỏng trong quá trình <b>downloand</b> , vì vậy bạn hãy dành chút ích thời gian để chúng tôi hoàn tất để đảm bảo tệp không bị lỗi</div>
 </div>
 </div>
+</div>
+	<style>
+.info {
+    background: #F8E38D url(http://2.bp.blogspot.com/-3rcGQ-VAKb8/UlA4L72c6wI/AAAAAAAAFtY/f__fkV_xBsQ/s1600/info.png) no-repeat 12px 8px;
+    color: #222;
+    line-height: 22px;
+    min-height: 38px;
+    padding: 10px 12px 12px 68px;
+    margin: 5px 0;
+}
+</style>
 	<style>
   .khung{margin:0 0 15px;clear:both;border: 3px solid #EE0000;border-radius: 10px 10px 10px 10px;;padding: 8px 2px;}
 #button1 {
